<resources>

    <string name="app_name">Medieval Wipeout</string>
    <string name="action_settings">Settings</string>
    <string name="card">Card</string>
    <string name="opponent_field">Opponent Field</string>
    <string name="deck">Deck</string>
    <string name="app_id">629309157185699</string>
    <string name="start_game">Start Game</string>
    <string name="edit_deck">Edit Deck</string>
    <string name="stop_game">Stop Game</string>
    <string name="next_phase">Next Phase</string>
    <string name="refresh_game">Refresh Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="open_packet">Open Packet</string>
    <string name="home">Home</string>
    <string name="new_deck">New Deck</string>
    <string name="preferences">Preferences</string>
    <string name="attack">Attack</string>
    <string name="trade">Trade</string>
    <string name="defense">Defense</string>
    <string name="faith">Faith</string>
    <string name="gold">Gold</string>
    <string name="life_points">Life Points</string>
    <string name="not_initialized">Not initialized</string>
    <string name="loading">Loading</string>
    <string name="being_modified">Being modified</string>
    <string name="ok">OK</string>
    <string name="number_of_cards">Number of Cards</string>
    
</resources>