<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_initialized" >
    </TextView>

    <TextView
        android:id="@+id/debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_initialized" >
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/launchGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="1"
            android:visibility="invisible" />
    </LinearLayout>

    <Button
        android:id="@+id/resumeGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_game" />

    <Button
        android:id="@+id/preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences" />

    <ListView
        android:id="@+id/deckTemplatesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>